Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -22,6 +22,8 @@
     "\n",
     "Type your answer below this line:\n",
     "_______________________________________________________________________________________________________________________________\n",
+    "TEXT\n",
+    "INTEGER\n",
     "\n",
     "\n",
     "\n",
