Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -22,8 +22,10 @@
     "\n",
     "Type your answer below this line:\n",
     "_______________________________________________________________________________________________________________________________\n",
-    "TEXT\n",
-    "INTEGER\n",
+    "INTEGER, a positive or negative whole number\n",
+    "TEXT, a text string\n",
+    "DATE, the date formatted as YYYY-MM-DD for the year, month, and day\n",
+    "REAL, a decimal value \n",
     "\n",
     "\n",
     "\n",
