Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -27,6 +27,7 @@
     "DATE, the date formatted as YYYY-MM-DD for the year, month, and day\n",
     "REAL, a decimal value \n",
     "\n",
+    "Yes\n",
     "\n",
     "\n",
     "\n",
