Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -28,6 +28,14 @@
     "REAL, a decimal value \n",
     "\n",
     "Yes\n",
+    "SQL data types can be broadly divided into following categories.\n",
+    "\n",
+    "Numeric data types such as int, tinyint, bigint, float, real etc.\n",
+    "Date and Time data types such as Date, Time, Datetime etc.\n",
+    "Character and String data types such as char, varchar, text etc.\n",
+    "Unicode character string data types, for example nchar, nvarchar, ntext etc.\n",
+    "Binary data types such as binary, varbinary etc.\n",
+    "Miscellaneous data types – clob, blob, xml, cursor, table etc.\n",
     "\n",
     "\n",
     "\n",
