Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,7 @@
     "Type your answer below this line:\n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
-    "Primary key is uniwue t\n",
+    "Primary key is unique to the table in question and a foregin key in that\n",
     "\n",
     "\n",
     "\n",
