--- a/index.ipynb
+++ b/index.ipynb
@@ -70,6 +70,8 @@
     "Type your answer below this line:\n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
+    "There are four basic types of SQL joins: inner, left, right, and full. \n",
+    "\n",
     "\n",
     "\n",
     "## Question 5\n",
