Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,10 @@
     "\n",
     "There are four basic types of SQL joins: inner, left, right, and full. \n",
     "\n",
-    "\n",
+    "(INNER) JOIN: Returns records that have matching values in both tables\n",
+    "LEFT (OUTER) JOIN: Return all records from the left table, and the matched records from the right table\n",
+    "RIGHT (OUTER) JOIN: Return all records from the right table, and the matched records from the left table\n",
+    "FULL (OUTER) JOIN: Return all records when there is a match in either left or right table\n",
     "\n",
     "## Question 5\n",
     "\n",
