--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "Type your answer below this line:\n",
     "_______________________________________________________________________________________________________________________________\n",
-    "\n",
+    "When using aggregate f\n",
     "\n",
     "\n",
     "## Question 6\n",
