--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "Type your answer below this line:\n",
     "_______________________________________________________________________________________________________________________________\n",
-    "When using aggregate functions\n",
+    "When using aggregate functions or calculations performed on multiple rows of a table are called aggregates.\n",
     "\n",
     "\n",
     "## Question 6\n",
