Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,11 @@
     "Type your answer below this line:\n",
     "_______________________________________________________________________________________________________________________________\n",
     "When using aggregate functions or calculations performed on multiple rows of a table, GROUP BY is needed.\n",
-    "\n",
+    "COUNT(): count the number of rows\n",
+    "SUM(): the sum of the values in a column\n",
+    "MAX()/MIN(): the largest/smallest value\n",
+    "AVG(): the average of the values in a column\n",
+    "ROUND(): round the values in the column\n",
     "\n",
     "## Question 6\n",
     "\n",
